...

        azDivider()

        azRailToggle(
            id = "online",
            isChecked = isOnline,
            toggleOnText = "Online",
            toggleOffText = "Offline",
            route = "online",
            onClick = {
                isOnline = !isOnline
                Log.d(TAG, "Online toggled to: $isOnline")
            }
        )
...
