...
                headerIconSize = 56.dp,
                itemEntrance = entrance,
                itemExit = if (entrance == AzEntrance.None) AzExit.None else AzExit.Turnstile,
                tiltOnPress = tiltOnPress,
                itemTextStyle = TextStyle(fontSize = 28.sp, fontWeight = FontWeight.Light),
            )
            azItem("Profile") { lastAction = "Profile" }
            azItem("Settings") { lastAction = "Settings" }
            azToggle(
                isChecked = dark,
                toggleOnText = "Dark",
                toggleOffText = "Light",
            ) { dark = it }
...
